tests/errors/sem.arg-overflow.typeof.or
main :: () -> void {
    typeof(int, int);
};
